<?xml version="1.0"?>
<package format="2">
  <name>xv_11_lidar_raspberry</name>
  <version>0.0.2</version>
  <description>XV 11 lidar (laser range finder) with RaspberryPi and ROS</description>
  <maintainer email="jbayle@gmail.com">Julien BAYLE</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <export></export>
</package>
